--- a/Roomie/Roomie/Task.storyboard
+++ b/Roomie/Roomie/Task.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Title-->
+        <!--Tasks-->
         <scene sceneID="sE9-Sb-1tx">
             <objects>
                 <tableViewController id="dBd-cu-36m" customClass="TaskListTableViewController" customModule="Roomie" customModuleProvider="target" sceneMemberID="viewController">
@@ -29,19 +29,19 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="t7q-dI-16Z">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="606-qR-87j">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="606-qR-87j">
                                                     <rect key="frame" x="0.0" y="0.0" width="125" height="43.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mRX-wv-mjg">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mRX-wv-mjg">
                                                     <rect key="frame" x="125" y="0.0" width="125" height="43.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZQ4-XI-FYX">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZQ4-XI-FYX">
                                                     <rect key="frame" x="250" y="0.0" width="125" height="43.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -70,17 +70,18 @@
                             <outlet property="delegate" destination="dBd-cu-36m" id="wgA-Mn-iFD"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Title" id="AGg-Qd-R6V">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="keL-Xu-72k">
+                    <navigationItem key="navigationItem" title="Tasks" id="AGg-Qd-R6V">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="wpz-MQ-ed9">
                             <connections>
-                                <segue destination="lkw-6Z-soc" kind="show" identifier="ToNewTaskVC" id="DlK-kK-sWx"/>
+                                <segue destination="lkw-6Z-soc" kind="show" identifier="ToNewTaskVC" id="fam-YY-gjK"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j2V-H7-H3Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1783" y="122"/>
+            <point key="canvasLocation" x="2460" y="121.88905547226388"/>
         </scene>
         <!--Title-->
         <scene sceneID="AQv-5G-zYV">
@@ -194,29 +195,28 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cb5-43-Szm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2582" y="122"/>
+            <point key="canvasLocation" x="3260" y="121.88905547226388"/>
         </scene>
-        <!--Task-->
-        <scene sceneID="xNE-Sp-YQ9">
+        <!--Navigation Controller-->
+        <scene sceneID="8uM-PR-yII">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1Bn-gd-U2P" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Task" id="rSx-Mv-K8Q"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="STM-BH-iJ1" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0p2-0y-x4a">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eyI-Q0-lQZ">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="dBd-cu-36m" kind="relationship" relationship="rootViewController" id="kip-UF-zbW"/>
+                        <segue destination="dBd-cu-36m" kind="relationship" relationship="rootViewController" id="jeL-RP-ZTo"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="SCh-5T-E42" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YyO-Ex-1xU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="942" y="122"/>
+            <point key="canvasLocation" x="1599" y="108"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="DlK-kK-sWx"/>
+        <segue reference="fam-YY-gjK"/>
     </inferredMetricsTieBreakers>
 </document>
