--- a/Roomie/Roomie/Base.lproj/Main.storyboard
+++ b/Roomie/Roomie/Base.lproj/Main.storyboard
@@ -166,7 +166,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="SLm-TJ-fxV" kind="show" identifier="toTabBar" id="dei-rC-aI3"/>
+                                            <segue destination="SLm-TJ-fxV" kind="presentation" identifier="toTabBar" id="dei-rC-aI3"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
