--- a/Roomie/Roomie/Task.storyboard
+++ b/Roomie/Roomie/Task.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dBd-cu-36m">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="1Av-cj-CMP">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Tasks-->
+        <!--Title-->
         <scene sceneID="sE9-Sb-1tx">
             <objects>
-                <tableViewController id="dBd-cu-36m" customClass="TaskListTableViewController" customModule="Roomie" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController automaticallyAdjustsScrollViewInsets="NO" id="dBd-cu-36m" customClass="TaskListTableViewController" customModule="Roomie" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="plR-ud-hgh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -70,10 +70,10 @@
                             <outlet property="delegate" destination="dBd-cu-36m" id="wgA-Mn-iFD"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Tasks" id="AGg-Qd-R6V">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="wpz-MQ-ed9">
+                    <navigationItem key="navigationItem" title="Title" id="DJZ-PV-R8F">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="LWk-K7-DLE">
                             <connections>
-                                <segue destination="lkw-6Z-soc" kind="show" identifier="ToNewTaskVC" id="fam-YY-gjK"/>
+                                <segue destination="lkw-6Z-soc" kind="show" identifier="ToNewTaskVC" id="3cQ-4r-4uQ"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -81,7 +81,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j2V-H7-H3Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2460" y="121.88905547226388"/>
+            <point key="canvasLocation" x="2799.1999999999998" y="121.88905547226388"/>
         </scene>
         <!--Title-->
         <scene sceneID="AQv-5G-zYV">
@@ -195,28 +195,28 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cb5-43-Szm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3260" y="121.88905547226388"/>
+            <point key="canvasLocation" x="3599.1999999999998" y="121.88905547226388"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="8uM-PR-yII">
+        <scene sceneID="9wN-Df-BNz">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="STM-BH-iJ1" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1Av-cj-CMP" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eyI-Q0-lQZ">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dlw-0G-DwF">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="dBd-cu-36m" kind="relationship" relationship="rootViewController" id="jeL-RP-ZTo"/>
+                        <segue destination="dBd-cu-36m" kind="relationship" relationship="rootViewController" id="C98-Xg-rjD"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="YyO-Ex-1xU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vd6-Le-73o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1599" y="108"/>
+            <point key="canvasLocation" x="2066" y="122"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="fam-YY-gjK"/>
+        <segue reference="3cQ-4r-4uQ"/>
     </inferredMetricsTieBreakers>
 </document>
