--- a/Roomie/Roomie/Settings.storyboard
+++ b/Roomie/Roomie/Settings.storyboard
@@ -77,6 +77,9 @@
                                                 <integer key="value" value="10"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <segue destination="DvO-Uc-oif" kind="show" id="CY0-Vn-M6T"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -100,6 +103,53 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OaE-y5-BSD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="468" y="87.706146926536732"/>
+        </scene>
+        <!--About Us-->
+        <scene sceneID="jiW-vo-hwE">
+            <objects>
+                <viewController id="DvO-Uc-oif" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WGP-Ll-V9K"/>
+                        <viewControllerLayoutGuide type="bottom" id="fCo-4j-PdX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="z6z-js-Ipn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="FbZ-e8-jTw">
+                                <rect key="frame" x="67" y="269" width="240" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="82d-a3-aHr"/>
+                                    <constraint firstAttribute="height" constant="128" id="CgB-wW-zcG"/>
+                                </constraints>
+                                <string key="text">Welcome to Roomies! 
+We are called One Round Tech and we’re dedicated to making your busy life a little bit easier.  
+Contributors: Alex Aslett, Kaitlyn Barker, Johnathan Pham</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devMountain" translatesAutoresizingMaskIntoConstraints="NO" id="ovt-7S-vlu">
+                                <rect key="frame" x="0.0" y="64" width="375" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="ICQ-gw-Ufz"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="FbZ-e8-jTw" firstAttribute="centerY" secondItem="z6z-js-Ipn" secondAttribute="centerY" id="3bz-Fk-edH"/>
+                            <constraint firstItem="ovt-7S-vlu" firstAttribute="leading" secondItem="z6z-js-Ipn" secondAttribute="leading" id="C7d-cm-Qu7"/>
+                            <constraint firstAttribute="trailing" secondItem="ovt-7S-vlu" secondAttribute="trailing" id="QlK-uF-Htl"/>
+                            <constraint firstItem="FbZ-e8-jTw" firstAttribute="centerX" secondItem="z6z-js-Ipn" secondAttribute="centerX" id="dal-Jw-8GV"/>
+                            <constraint firstItem="ovt-7S-vlu" firstAttribute="top" secondItem="WGP-Ll-V9K" secondAttribute="bottom" id="lPD-cs-fa1"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="About Us" id="eYU-eW-HRz"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vsv-Il-luq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="812" y="864.91754122938539"/>
         </scene>
         <!--Profile-->
         <scene sceneID="uCp-XU-Yzf">
@@ -476,5 +526,6 @@
     </scenes>
     <resources>
         <image name="avatar" width="512" height="512"/>
+        <image name="devMountain" width="2000" height="1123"/>
     </resources>
 </document>
