--- a/Roomie/Roomie/Post.storyboard
+++ b/Roomie/Roomie/Post.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Rg7-Nh-3g1">
-                                <rect key="frame" x="8" y="580" width="359" height="30"/>
+                                <rect key="frame" x="8" y="578" width="359" height="30"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hzQ-AX-L2W">
                                         <rect key="frame" x="0.0" y="0.0" width="318" height="30"/>
@@ -39,11 +39,11 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="awn-vd-HpL"/>
+                                    <constraint firstAttribute="height" constant="30" id="3yd-Et-vZA"/>
                                 </constraints>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aaL-q6-3ue">
-                                <rect key="frame" x="0.0" y="64" width="375" height="508"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="506"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" textLabel="luq-C2-IRs" detailTextLabel="uOA-2e-9fB" style="IBUITableViewCellStyleValue1" id="h8i-iE-Be8">
@@ -79,12 +79,12 @@
                         </subviews>
                         <constraints>
                             <constraint firstItem="Rg7-Nh-3g1" firstAttribute="leading" secondItem="p8y-xd-bgR" secondAttribute="leading" constant="8" id="2sZ-6P-ghN"/>
+                            <constraint firstItem="521-Fq-d6h" firstAttribute="top" secondItem="Rg7-Nh-3g1" secondAttribute="bottom" constant="10" id="8bI-7W-c3y"/>
                             <constraint firstItem="aaL-q6-3ue" firstAttribute="leading" secondItem="p8y-xd-bgR" secondAttribute="leading" id="Rv7-NO-SUH"/>
                             <constraint firstAttribute="trailing" secondItem="Rg7-Nh-3g1" secondAttribute="trailing" constant="8" id="Sgv-fl-8o6"/>
                             <constraint firstItem="aaL-q6-3ue" firstAttribute="top" secondItem="uEd-hf-hD1" secondAttribute="bottom" id="Vom-mN-uTb"/>
                             <constraint firstItem="Rg7-Nh-3g1" firstAttribute="top" secondItem="aaL-q6-3ue" secondAttribute="bottom" constant="8" id="can-K1-54A"/>
                             <constraint firstAttribute="trailing" secondItem="aaL-q6-3ue" secondAttribute="trailing" id="geU-JS-CoG"/>
-                            <constraint firstItem="521-Fq-d6h" firstAttribute="top" secondItem="Rg7-Nh-3g1" secondAttribute="bottom" constant="8" id="p3A-Eb-lQF"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Messages" id="H1Y-qJ-zWr"/>
@@ -94,6 +94,7 @@
                         <outlet property="postStackView" destination="Rg7-Nh-3g1" id="aCq-8I-eyJ"/>
                         <outlet property="postTextField" destination="hzQ-AX-L2W" id="t1S-gH-kpy"/>
                         <outlet property="sendButton" destination="Hyg-QP-WA2" id="aKW-NV-T2X"/>
+                        <outlet property="stackViewBottomConstraint" destination="8bI-7W-c3y" id="FCF-hh-yuq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3vk-eo-fhU" userLabel="First Responder" sceneMemberID="firstResponder"/>
